Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32006

[Internal testing] Kit display name is not unique appears when adding kits

XMLWordPrintable

    • bda579b41 (15.0)

      Steps to reproduce:
      1. Open Kit management from optiopns.
      2. Have a valid Qt version in Qt Version.
      3. Hit Add button
      4. Hit Add button couple more times

      Expected results:
      New kit are added with unique names based on internal counter

      Actual results:
      New kit are added with unique names based on internal counter but
      "Display name is not unique" warning appears for the first and last added kits.


        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            semlanik Alexey Edelev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes