ProjectExplorer: Fix bogus warning about non-unique kit names

Just a minimally intrusive hack.

Fixes: QTCREATORBUG-32006
Change-Id: I2b777462715847b37288d38e1ce13df80196dd7f
Reviewed-by: hjk <hjk@qt.io>